--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,13 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@hugeicons/core-free-icons": "^1.0.14",
     "@hugeicons/react": "^1.0.5",
     "@tanstack/react-router": "^1.120.11",
-    "@tinymce/tinymce-react": "^6.2.0",
     "@types/node": "^22.15.24",
+    "@uiw/react-md-editor": "^4.0.7",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
