--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,14 @@
-DJANGO_SETTINGS_MODULE=core.settings.production
+SECRET_KEY='z`W.|->fk$~IxBL=HTP?B:8O8D*wuuLdU1Y"%<*LioWt2{BZ*Mz8-OitJ8CK=f&V*nEFCo#;[c.twqZ68K])[W>\\v?6@{UV;aD%`'
+DEBUG=False
+ALLOWED_HOSTS=admin.ifuw.ru
+DB_NAME=eisec_fastapi
+DB_USER=eisec_fastapi
+DB_PASSWORD=jA&TJA8x5rBt
+DB_HOST=eisec.beget.tech
+DB_PORT=3306
+EMAIL_HOST=smtp.beget.com
+EMAIL_PORT=465
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=tech@ifuw.ru
+EMAIL_HOST_PASSWORD=bSvV6z!ykBl*
+REDIS_URL=redis://localhost:6379/1
